src/objects/Electronic_Notary_Provider_Information__c.object
<CustomObject>
    <fields>
        <fullName>Application_BG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Electronic Notary Provider Information</relationshipLabel>
        <relationshipName>Electronic_Notary_Provider_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endorsement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Endorsement</label>
        <referenceTo>Endorsement__c</referenceTo>
        <relationshipLabel>Electronic Notary Provider Information</relationshipLabel>
        <relationshipName>Electronic_Notary_Provider_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Docusign</fullName>
                </value>
                <value>
                    <fullName>DocVerify</fullName>
                </value>
                <value>
                    <fullName>Pavaso</fullName>
                </value>
                <value>
                    <fullName>Simplifile</fullName>
                </value>
                <value>
                    <fullName>World Wide Notary</fullName>
                </value>
                <value>
                    <fullName>CSC E-recording</fullName>
                </value>
                <value>
                    <fullName>GNUPG (proprietary or in-house software)</fullName>
                </value>
                <value>
                    <fullName>Collier Technologies LLC (Orcas Island ISP)</fullName>
                </value>
                <value>
                    <fullName>Rush</fullName>
                </value>
                <value>
                    <fullName>Translate</fullName>
                </value>
                <value>
                    <fullName>SnapDocs</fullName>
                </value>
                <value>
                    <fullName>Settleware</fullName>
                </value>
                <value>
                    <fullName>Oracle Textura Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Electronic Notary Provider Information</relationshipLabel>
        <relationshipName>Electronic_Notary_Provider_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Electronic Notary Provider Information</label>
    <nameField>
        <displayFormat>Provider-{0000000}</displayFormat>
        <label>Electronic Notary Provider Information N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Electronic Notary Provider Information</pluralLabel>
    <recordTypes>
        <fullName>Provider</fullName>
        <active>true</active>
        <label>Provider</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Electronic_software_provider_not_blank</fullName>
        <active>true</active>
        <description>if Provider_Name__c is other then only electronic software provider should be filled.</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Provider_Name__c,&apos;Other&apos;), 
ISBLANK( Description__c) 
)</errorConditionFormula>
        <errorMessage>Please enter Provide Information in description</errorMessage>
    </validationRules>
</CustomObject>